<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/main"
    android:background="@drawable/base">


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:id="@+id/cardprofile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/redrec"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="520dp"
        app:layout_constraintTop_toBottomOf="@id/cardprofile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/redrec"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:id="@+id/logoutpage"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/kotakm2"
            android:orientation="vertical"
            >

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/logoutbtn"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:background="@drawable/navbase"

        app:itemIconTint="@color/transp"
        app:itemTextColor="@color/transp"
        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/homebtn"
            android:background="@drawable/navhome"
            android:layout_marginTop="4dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/tombol_home"
            />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/addbtn"
            android:background="@drawable/navadd"
            android:layout_gravity="center"
            android:contentDescription="@string/tombol_add_file"
            />
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/profilebtn"
            android:background="@drawable/logoutfit"
            android:layout_gravity="end"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/tombol_profile"
            />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>
