<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:padding="16dp"
    android:background="@drawable/base_file">

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/backbtn"
        android:contentDescription="backtomainbutton"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/toback"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/viewinfile"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-84dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="330dp"
        android:layout_height="70dp"

        android:background="@drawable/kotak_mulus"

        app:itemIconTint="@color/transp"
        app:itemTextColor="@color/transp"
        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/homebtn"
            android:background="@drawable/navhome"
            android:layout_marginVertical="9dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/tombol_home"
            />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/addbtn"
            android:background="@drawable/navadd"
            android:layout_gravity="center"
            android:contentDescription="@string/tombol_add_file"
            />
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/profilebtn"
            android:background="@drawable/logoutfit"
            android:layout_gravity="end"
            android:layout_marginEnd="25dp"
            android:layout_marginVertical="9dp"
            android:contentDescription="@string/tombol_profile"
            />
    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>
