<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/main"
    android:background="@drawable/base">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upload_icon"
        android:background="@drawable/upload_file_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upload_text"
        android:text="Upload File"
        android:textColor="#000000"
        android:textSize="30sp"

        android:fontFamily="@font/righteous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_icon"
        />

    <ImageButton
        android:id="@+id/choose_folder_button"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:background="@drawable/kotak_mulus"
        android:gravity="center"
        android:contentDescription="@string/tombol_memilih_folder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="250dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose Save Folder"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/choose_folder_button"
        app:layout_constraintEnd_toEndOf="@id/choose_folder_button"
        app:layout_constraintTop_toTopOf="@id/choose_folder_button"
        app:layout_constraintBottom_toBottomOf="@id/choose_folder_button"

        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="291dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upload_device"
        android:background="@drawable/uploadbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="upload dari perangkat"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upload_cloud"
        android:background="@drawable/uploadcloud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/upload_device"
        android:contentDescription="mengambil dari cloud"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:background="@drawable/navbase"

        app:itemIconTint="@color/transp"
        app:itemTextColor="@color/transp"
        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/homebtn"
            android:background="@drawable/navhome"
            android:layout_marginTop="4dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/tombol_home"
            />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/addbtn"
            android:background="@drawable/navadd"
            android:layout_gravity="center"
            android:contentDescription="@string/tombol_add_file"
            />
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/profilebtn"
            android:background="@drawable/logoutfit"
            android:layout_gravity="end"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/tombol_profile"
            />
    </com.google.android.material.bottomnavigation.BottomNavigationView>








</androidx.constraintlayout.widget.ConstraintLayout>
